# constituency-intel

./: .env.example  README.md  pyproject.toml
app/: main.py
static-data/: wa-22.json
tests/: test_main.py
