[tool.poetry]
name = "constituency-intel"
version = "0.1.0"
description = "Microservice for analyzing political districts"
authors = ["Tyler Pritchard <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
httpx = "^0.27.0"
sqlalchemy = "^2.0"
pydantic = "^2.6"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"

[tool.pytest.ini_options]
pythonpath = ["."]
